[tool.black]
target-version = ['py37']
skip-magic-trailing-comma = true

[tool.pycln]
all = true
exclude = "main\\.py"

[tool.isort]
profile = "black"
combine_as_imports = true
skip_gitignore = true

[tool.poetry]
name = "server-bot-quick-start"
version = "0.1.0"
description = ""
authors = ["0xShinsu <mantlepepe@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi-poe = "0.0.19"
huggingface-hub = "0.16.4"
pydantic = ">=2"
modal = "^0.54.3762"
modal-client = "^0.54.3762"
fastapi = "^0.103.2"
pypdf2 = "^3.0.1"
openai = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
